--- a/src/app/sections/home/hero/hero.component.html
+++ b/src/app/sections/home/hero/hero.component.html
@@ -70,6 +70,8 @@
       ></span>
     </div>
     <div class="hero-bg-container">
+      <div class="faded-bg-left"></div>
+      <div class="faded-bg-right"></div>
       <img
         alt="Hero"
         class="hero-bg"
