--- a/src/app/sections/home/hero/hero.component.html
+++ b/src/app/sections/home/hero/hero.component.html
@@ -1,5 +1,5 @@
-<section class="relative pt-[12.25rem] overflow-hidden" id="hero">
-  <div class="container mx-auto px-5 lg:px-0">
+<section class="relative pt-[8.25rem] md:pt-[12.25rem] overflow-hidden" id="hero">
+  <div class="container mx-auto px-5 xl:px-0">
     <div class="relative z-10 text-center">
       <h1>
         Explore the Possibilities <br/>
@@ -28,7 +28,7 @@
       </div>
     </div>
     <div
-      class="mx-auto mt-16 relative z-10 max-w-[23rem] md:max-w-5xl xl:mb-24"
+      class="mx-auto mt-[62px] relative z-10 max-w-[23rem] md:max-w-5xl xl:mb-24"
     >
 
       <div class="hero-border">
@@ -80,6 +80,13 @@
         width="1664"
       />
       <img alt="gradient" ngSrc="/img/gradient-1.png" width="1417" height="1418" class="bg-gradient"/>
+    </div>
+    <div class="pattern">
+      <div class="ellipse-1"></div>
+      <div class="ellipse-2"></div>
+      <div class="ellipse-3"></div>
+      <div class="ellipse-4"></div>
+      <div class="ellipse-5"></div>
     </div>
   </div>
 </section>
