add border corners

--- a/src/app/sections/home/hero/hero.component.html
+++ b/src/app/sections/home/hero/hero.component.html
@@ -1,4 +1,4 @@
-<section class="relative pt-[8.25rem] md:pt-[12.25rem] overflow-hidden" id="hero">
+<app-section containerClass="pt-[8.25rem] md:pt-[12.25rem] overflow-hidden" id="hero" [corners]="true">
   <div class="container mx-auto px-5 xl:px-0">
     <div class="relative z-10 text-center">
       <h1>
@@ -28,7 +28,7 @@
       </div>
     </div>
     <div
-      class="mx-auto mt-[62px] relative z-10 max-w-[23rem] md:max-w-5xl xl:mb-24"
+      class="mx-auto mt-[62px] relative z-10 md:px-5 lg:px-[30px] max-w-[23rem] md:max-w-5xl xl:mb-24"
     >
 
       <div class="hero-border">
@@ -89,4 +89,4 @@
       <div class="ellipse-5"></div>
     </div>
   </div>
-</section>
+</app-section>
