--- a/src/app/sections/home/hero/hero.component.html
+++ b/src/app/sections/home/hero/hero.component.html
@@ -30,7 +30,6 @@
     <div
       class="mx-auto mt-[62px] relative z-10 md:px-5 lg:px-[30px] max-w-[23rem] md:max-w-5xl xl:mb-24"
     >
-
       <div class="hero-border">
         <span class="block w-full h-6 bg-dark-purple rounded-t-xl"></span>
         <div
@@ -68,6 +67,12 @@
       <span
         class="relative z-10 block h-6 w-9/12 mx-auto opacity-50 bg-[#1B1B2E] rounded-b-[20px]"
       ></span>
+    </div>
+    <div class="tab-bar">
+      <ng-icon name="remixHomeSmile2Line" size="24" />
+      <ng-icon name="remixFileList2Line" size="24" />
+      <ng-icon name="remixSearchLine" size="24" />
+      <ng-icon name="remixAddBoxLine" size="24" />
     </div>
     <div class="hero-bg-container">
       <div class="faded-bg-left"></div>
