--- a/src/app/sections/home/hero/hero.component.html
+++ b/src/app/sections/home/hero/hero.component.html
@@ -67,12 +67,32 @@
       <span
         class="relative z-10 block h-6 w-9/12 mx-auto opacity-50 bg-[#1B1B2E] rounded-b-[20px]"
       ></span>
-    </div>
-    <div class="tab-bar">
-      <ng-icon name="remixHomeSmile2Line" size="24" />
-      <ng-icon name="remixFileList2Line" size="24" />
-      <ng-icon name="remixSearchLine" size="24" />
-      <ng-icon name="remixAddBoxLine" size="24" />
+      <div class="tab-bar">
+        <ng-icon name="remixHomeSmile2Line" size="28" />
+        <ng-icon name="remixFileList2Line" size="28" />
+        <ng-icon name="remixSearchLine" size="28" />
+        <ng-icon name="remixAddBoxLine" size="28" />
+      </div>
+      <div class="code-generation">
+        <div class="relative w-[52px] h-[52px] rounded-xl">
+          <img ngSrc="/img/hero/speed.png" width="3000" height="2625" alt="Speed" class="absolute w-full h-full rounded-xl"/>
+        </div>
+        <div>
+          <h4 class="text-base font-semibold">Code generation</h4>
+          <div class="relative mt-2 flex items-center">
+            <div class="relative h-6 w-6 overflow-hidden rounded-full border-2 border-transparent">
+              <img ngSrc="/img/avatar/avatar-1.png" alt="avatar 1" width="2619" height="2620" class="absolute object-cover scale-[1.8] rounded-full"/>
+            </div>
+            <div class="relative -left-1.5 h-6 w-6 overflow-hidden rounded-full border-2 border-dark-violet">
+              <img ngSrc="/img/avatar/avatar-2.jpeg" alt="avatar 2" width="2713" height="4096" class="absolute object-cover scale-[2.8] top-3 right-1 rounded-full"/>
+            </div>
+            <div class="relative h-6 w-6 -left-3 overflow-hidden rounded-full border-2 border-dark-violet">
+              <img ngSrc="/img/avatar/avatar-3.jpeg" alt="avatar 3" width="3072" height="4096" class="absolute object-cover rounded-full"/>
+            </div>
+          </div>
+        </div>
+        <p class="text-xs text-dark-white self-end">1 min ago</p>
+      </div>
     </div>
     <div class="hero-bg-container">
       <div class="faded-bg-left"></div>
