--- a/src/app/sections/home/hero/hero.component.html
+++ b/src/app/sections/home/hero/hero.component.html
@@ -28,7 +28,7 @@
       </div>
     </div>
     <div
-      class="mx-auto mt-[62px] relative z-10 md:px-5 lg:px-[30px] max-w-[23rem] md:max-w-5xl xl:mb-24"
+      class="mx-auto mt-[62px] relative z-10 md:px-5 lg:px-[30px] xl:px-0 max-w-[23rem] md:max-w-5xl xl:mb-24"
     >
       <div class="hero-border">
         <span class="block w-full h-6 bg-dark-purple rounded-t-xl"></span>
