--- a/src/app/sections/home/hero/hero.component.css
+++ b/src/app/sections/home/hero/hero.component.css
@@ -2,6 +2,38 @@
   @apply hidden absolute text-white -left-12 bottom-[18%]  z-20;
 }
 
+.circle-1, .circle-2, .circle-3, .circle-4, .circle-5, .circle-6 {
+  @apply hidden absolute z-0 rounded-full;
+}
+.circle-1 {
+  @apply  xl:left-[15%] xl:top-1/2 xl:-translate-y-1/2 h-6 w-6;
+  background: linear-gradient(180deg, #88E5BE 0%, #1A1A32 100%);
+}
+
+.circle-2 {
+  @apply md:block left-[10%] top-[22%] lg:top-[20%] z-20 w-4 h-4;
+  background: linear-gradient(180deg, #DD734F 0%, #1A1A32 100%);
+}
+
+.circle-3 {
+  @apply lg:block w-3 h-3 left-1/3 xl:left-[30%] -translate-x-1/2 top-[45%] xl:top-[40%];
+  background: linear-gradient(180deg, #B9AEDF 0%, #1A1A32 100%);
+}
+
+.circle-4 {
+  @apply right-[30%] top-[36%] 2xl:right-[38%] 2xl:top-[38%] w-3 h-3;
+  background: linear-gradient(180deg, #88E5BE 0%, #1A1A32 100%);
+}
+
+.circle-5 {
+  @apply block right-[10%] top-1/2 md:hidden lg:block md:right-[16%] md:top-[40%] -translate-y-1/2  w-4 h-4;
+  background: linear-gradient(180deg, #88E5BE 0%, #1A1A32 100%);
+}
+
+.circle-6 {
+  @apply right-[20%] top-[20%]  w-2 h-2;
+  background: linear-gradient(180deg, #DD734F 0%, #1A1A32 100%);
+}
 .code-generation {
   @apply hidden absolute text-white -right-12 bottom-[26%]  z-20;
 }
@@ -98,6 +130,10 @@
       @apply block;
     }
   }
+
+  .circle-1 {
+    @apply block top-[53%] -translate-y-[53%] left-[10.7%];
+  }
 }
 
 @media (min-width: 1440px) {
@@ -115,6 +151,10 @@
 
   .pattern {
     @apply top-[50%];
+  }
+
+  .circle-4, .circle-6 {
+    @apply block;
   }
 }
 
