--- a/src/app/sections/home/hero/hero.component.html
+++ b/src/app/sections/home/hero/hero.component.html
@@ -106,6 +106,12 @@
       />
       <img alt="gradient" ngSrc="/img/gradient-1.png" width="1417" height="1418" class="bg-gradient"/>
     </div>
+      <div class="circle-1"></div>
+      <div class="circle-2"></div>
+      <div class="circle-3"></div>
+      <div class="circle-4"></div>
+      <div class="circle-5"></div>
+      <div class="circle-6"></div>
     <div class="pattern">
       <div class="ellipse-1"></div>
       <div class="ellipse-2"></div>
