--- a/src/app/sections/home/hero/hero.component.css
+++ b/src/app/sections/home/hero/hero.component.css
@@ -16,7 +16,7 @@
 }
 
 .circle-3 {
-  @apply lg:block w-3 h-3 left-1/3 xl:left-[30%] -translate-x-1/2 top-[45%] xl:top-[40%];
+  @apply lg:block w-3 h-3 left-1/3 xl:left-[30%] -translate-x-1/2 top-[45%] ;
   background: linear-gradient(180deg, #B9AEDF 0%, #1A1A32 100%);
 }
 
@@ -35,7 +35,7 @@
   background: linear-gradient(180deg, #DD734F 0%, #1A1A32 100%);
 }
 .code-generation {
-  @apply hidden absolute text-white -right-12 bottom-[26%]  z-20;
+  @apply hidden absolute text-white -right-12 bottom-[30%]  z-20;
 }
 
 .hero-border {
@@ -55,7 +55,7 @@
 }
 
 .hero-bg-container {
-  @apply absolute -z-10 w-full md:max-w-screen-lg lg:max-w-screen-md left-0 right-0 mx-auto -bottom-[10%] md:-bottom-[36%] lg:-bottom-1/3 xl:-bottom-[26%];
+  @apply absolute -z-10 w-full md:max-w-screen-lg lg:max-w-screen-md left-0 right-0 mx-auto -bottom-[10%] md:-bottom-[36%] lg:-bottom-1/3;
 }
 .hero-bg {
   @apply w-full h-auto scale-[1.46] md:scale-[0.87] lg:scale-[1.2] xl:scale-[0.95] opacity-[0.03];
@@ -103,6 +103,10 @@
   }
 }
 
+.logos {
+  @apply hidden;
+}
+
 @media only screen and (max-width: 320px) {
   .hero-bg-container {
     @apply -bottom-[7%];
@@ -134,6 +138,18 @@
   .circle-1 {
     @apply block top-[53%] -translate-y-[53%] left-[10.7%];
   }
+
+  .circle-3 {
+    @apply top-[36%];
+  }
+
+  .hero-bg-container {
+    @apply -bottom-[12%];
+  }
+
+  .logos {
+    @apply flex flex-col items-center justify-center my-20 gap-8;
+  }
 }
 
 @media (min-width: 1440px) {
@@ -143,6 +159,10 @@
     img {
       @apply scale-[0.53];
     }
+  }
+
+  .hero-bg-container {
+    @apply -bottom-[9%];
   }
 
   .hero-bg {
@@ -155,6 +175,18 @@
 
   .circle-4, .circle-6 {
     @apply block;
+  }
+
+  .circle-4 {
+    @apply top-1/3;
+  }
+
+  .circle-5 {
+    @apply top-[36%];
+  }
+
+  .logos {
+    @apply gap-16;
   }
 }
 
