--- a/src/app/sections/home/hero/hero.component.html
+++ b/src/app/sections/home/hero/hero.component.html
@@ -27,71 +27,84 @@
         </app-button>
       </div>
     </div>
-    <div
-      class="mx-auto mt-[62px] relative z-10 md:px-5 lg:px-[30px] xl:px-0 max-w-[23rem] md:max-w-5xl xl:mb-24"
-    >
-      <div class="hero-border">
-        <span class="block w-full h-6 bg-dark-purple rounded-t-xl"></span>
-        <div
-          class="aspect-[33/40] rounded-b-[0.9rem] overflow-hidden md:aspect-[688/490] lg:aspect-[1664/912] xl:aspect-[1664/812]"
-        >
-          <img
-            alt="Hero"
-            class="w-full scale-[1.7] md:scale-[1] translate-y-[8%] md:-translate-y-[10%] lg:-translate-y-[20%] xl:-translate-y-[24%]"
-            height="2432"
-            ngSrc="/img/hero/hero.png"
-            width="1664"
-          />
+    <div>
+      <div
+        class="mx-auto mt-[62px] relative z-10 md:px-5 lg:px-[30px] xl:px-0 max-w-[23rem] md:max-w-5xl xl:mb-24"
+      >
+        <div class="hero-border">
+          <span class="block w-full h-6 bg-dark-purple rounded-t-xl"></span>
           <div
-            class="absolute bottom-5 left-3 right-3 md:max-w-[488px] md:mx-auto md:left-0 md:right-0"
+            class="aspect-[33/40] rounded-b-[0.9rem] overflow-hidden md:aspect-[688/490] lg:aspect-[1664/912] xl:aspect-[1664/812]"
           >
+            <img
+              alt="Hero"
+              class="w-full scale-[1.7] md:scale-[1] translate-y-[8%] md:-translate-y-[10%] lg:-translate-y-[20%] xl:-translate-y-[24%]"
+              height="2432"
+              ngSrc="/img/hero/hero.png"
+              width="1664"
+            />
             <div
-              class="flex items-center gap-4 bg-midnight/85 py-3 px-6 rounded-2xl md:rounded-3xl backdrop-blur-[2px]"
+              class="absolute bottom-5 left-3 right-3 md:max-w-[488px] md:mx-auto md:left-0 md:right-0"
             >
-              <img
-                alt="ellipse"
-                height="20"
-                ngSrc="/img/ellipse.png"
-                width="20"
-              />
-              <p class="text-lg leading-8">
-                IA is generating<span class="animate-bounce">|</span>
-              </p>
+              <div
+                class="flex items-center gap-4 bg-midnight/85 py-3 px-6 rounded-2xl md:rounded-3xl backdrop-blur-[2px]"
+              >
+                <img
+                  alt="ellipse"
+                  height="20"
+                  ngSrc="/img/ellipse.png"
+                  width="20"
+                />
+                <p class="text-lg leading-8">
+                  IA is generating<span class="animate-bounce">|</span>
+                </p>
+              </div>
             </div>
           </div>
         </div>
-      </div>
-      <span
-        class="relative z-10 block h-6 w-[90%] mx-auto bg-[#1B1B2E] rounded-b-[20px]"
-      ></span>
-      <span
-        class="relative z-10 block h-6 w-9/12 mx-auto opacity-50 bg-[#1B1B2E] rounded-b-[20px]"
-      ></span>
-      <div class="tab-bar">
-        <ng-icon name="remixHomeSmile2Line" size="28" />
-        <ng-icon name="remixFileList2Line" size="28" />
-        <ng-icon name="remixSearchLine" size="28" />
-        <ng-icon name="remixAddBoxLine" size="28" />
-      </div>
-      <div class="code-generation">
-        <div class="relative w-[52px] h-[52px] rounded-xl">
-          <img ngSrc="/img/hero/speed.png" width="3000" height="2625" alt="Speed" class="absolute w-full h-full rounded-xl"/>
+        <span
+          class="relative z-10 block h-6 w-[90%] mx-auto bg-[#1B1B2E] rounded-b-[20px]"
+        ></span>
+        <span
+          class="relative z-10 block h-6 w-9/12 mx-auto opacity-50 bg-[#1B1B2E] rounded-b-[20px]"
+        ></span>
+        <div class="tab-bar">
+          <ng-icon name="remixHomeSmile2Line" size="28" />
+          <ng-icon name="remixFileList2Line" size="28" />
+          <ng-icon name="remixSearchLine" size="28" />
+          <ng-icon name="remixAddBoxLine" size="28" />
         </div>
-        <div>
-          <h4 class="text-base font-semibold">Code generation</h4>
-          <div class="relative mt-2 flex items-center">
-            <div class="relative h-6 w-6 overflow-hidden rounded-full border-2 border-transparent">
-              <img ngSrc="/img/avatar/avatar-1.png" alt="avatar 1" width="2619" height="2620" class="absolute object-cover scale-[1.8] rounded-full"/>
-            </div>
-            <div class="relative -left-1.5 h-6 w-6 overflow-hidden rounded-full border-2 border-dark-violet">
-              <img ngSrc="/img/avatar/avatar-2.jpeg" alt="avatar 2" width="2713" height="4096" class="absolute object-cover scale-[2.8] top-3 right-1 rounded-full"/>
-            </div>
-            <div class="relative h-6 w-6 -left-3 overflow-hidden rounded-full border-2 border-dark-violet">
-              <img ngSrc="/img/avatar/avatar-3.jpeg" alt="avatar 3" width="3072" height="4096" class="absolute object-cover rounded-full"/>
+        <div class="code-generation">
+          <div class="relative w-[52px] h-[52px] rounded-xl">
+            <img ngSrc="/img/hero/speed.png" width="3000" height="2625" alt="Speed" class="absolute w-full h-full rounded-xl"/>
+          </div>
+          <div>
+            <h4 class="text-base font-semibold">Code generation</h4>
+            <div class="relative mt-2 flex items-center">
+              <div class="relative h-6 w-6 overflow-hidden rounded-full border-2 border-transparent">
+                <img ngSrc="/img/avatar/avatar-1.png" alt="avatar 1" width="2619" height="2620" class="absolute object-cover scale-[1.8] rounded-full"/>
+              </div>
+              <div class="relative -left-1.5 h-6 w-6 overflow-hidden rounded-full border-2 border-dark-violet">
+                <img ngSrc="/img/avatar/avatar-2.jpeg" alt="avatar 2" width="2713" height="4096" class="absolute object-cover scale-[2.8] top-3 right-1 rounded-full"/>
+              </div>
+              <div class="relative h-6 w-6 -left-3 overflow-hidden rounded-full border-2 border-dark-violet">
+                <img ngSrc="/img/avatar/avatar-3.jpeg" alt="avatar 3" width="3072" height="4096" class="absolute object-cover rounded-full"/>
+              </div>
             </div>
           </div>
+          <p class="text-xs text-dark-white self-end">1 min ago</p>
         </div>
-        <p class="text-xs text-dark-white self-end">1 min ago</p>
+      </div>
+      <div class="logos">
+        <h5 class="tag-line">
+          Helping people create beautiful content at
+        </h5>
+        <div class="flex items-center gap-12 xl:justify-between xl:gap-0 w-full">
+          <img ngSrc="/img/logos/fusionnone.png" width="204" height="40" alt="fusion"/>
+          <img ngSrc="/img/logos/techno.png" width="162" height="40" alt="techno"/>
+          <img ngSrc="/img/logos/your-logo.png" width="190" height="40" alt="your logo"/>
+          <img ngSrc="/img/logos/openai.png" width="160" height="40" alt="openai"/>
+        </div>
       </div>
     </div>
     <div class="hero-bg-container">
